--- a/main.ipynb
+++ b/main.ipynb
@@ -46,25 +46,53 @@
       "metadata": {
         "id": "8fz7E9vPOgmU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "0cf51b21-d126-41f7-828e-fa158c02e500"
       },
       "source": [
         "train_df.pop(\"Name\")\n",
         "train_df.pop(\"Ticket\")\n",
         "train_df.pop(\"Cabin\")"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       NaN\n",
+              "1       C85\n",
+              "2       NaN\n",
+              "3      C123\n",
+              "4       NaN\n",
+              "       ... \n",
+              "886     NaN\n",
+              "887     B42\n",
+              "888     NaN\n",
+              "889    C148\n",
+              "890     NaN\n",
+              "Name: Cabin, Length: 891, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "myo0l1PXPBVC",
+        "id": "nBcr9AJNjO_b",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "survived = train_df.pop(\"Survived\")"
+        "train_df=train_df.replace({\"male\":0,\"female\":1})"
       ],
       "execution_count": 0,
       "outputs": []
@@ -72,7 +100,186 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9j0-W0OZOmUw",
+        "id": "yiI_QCDFjbxN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_df=train_df.replace({\"S\":0,\"C\":1,\"Q\":2})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sl85rWX9j1wd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_df=train_df.dropna()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zDwuMOZRmoRH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sv=train_df.pop(\"Survived\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Q0t_4vGoS-o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_df[\"Survived\"]=sv"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fq9T4PTgoeRH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "features=list(train_df.columns[1:8])\n",
+        "features\n",
+        "X=train_df[features]\n",
+        "Y=train_df[\"Survived\"]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D1P3COy7lKm4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "outputId": "16988feb-9d6c-468c-b2f7-b8d822a32216"
+      },
+      "source": [
+        "from sklearn import tree\n",
+        "clf = tree.DecisionTreeClassifier()\n",
+        "clf.fit(X, Y)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+              "                       max_features=None, max_leaf_nodes=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, presort=False,\n",
+              "                       random_state=None, splitter='best')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n3KuWeBXlgWp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "def visualize_tree(tree, feature_names):\n",
+        "    \"\"\"Create tree png using graphviz.\n",
+        "\n",
+        "    Args\n",
+        "    ----\n",
+        "    tree -- scikit-learn DecsisionTree.\n",
+        "    feature_names -- list of feature names.\n",
+        "    \"\"\"\n",
+        "    with open(\"dt.dot\", 'w') as f:\n",
+        "        export_graphviz(tree, out_file=f,feature_names=feature_names)\n",
+        "\n",
+        "    command = [\"dot\", \"-Tpng\", \"dt.dot\", \"-o\", \"dt.png\"]\n",
+        "    try:\n",
+        "        subprocess.check_call(command)\n",
+        "    except:\n",
+        "        exit(\"Could not run dot, ie graphviz, to \"\n",
+        "             \"produce visualization\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YIlImLbipE7U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 305
+        },
+        "outputId": "59edf24c-863c-4491-8ac9-fc931b4f255c"
+      },
+      "source": [
+        "\n",
+        "visualize_tree(clf, features)"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-73-e8632c05dfb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvisualize_tree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-72-bb3084e931ad>\u001b[0m in \u001b[0;36mvisualize_tree\u001b[0;34m(tree, feature_names)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \"\"\"\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dt.dot\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mexport_graphviz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mcommand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"dot\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-Tpng\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dt.dot\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-o\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dt.png\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'export_graphviz' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yhoLip3XpI4a",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!pip install -q graphviz"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oPT_o0Wrp7eX",
         "colab_type": "code",
         "colab": {}
       },
