--- a/main.ipynb
+++ b/main.ipynb
@@ -46,18 +46,18 @@
       "metadata": {
         "id": "8fz7E9vPOgmU",
         "colab_type": "code",
+        "outputId": "c42af05c-9268-43d9-d0eb-e70bd0a08a10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "0cf51b21-d126-41f7-828e-fa158c02e500"
+        }
       },
       "source": [
         "train_df.pop(\"Name\")\n",
         "train_df.pop(\"Ticket\")\n",
         "train_df.pop(\"Cabin\")"
       ],
-      "execution_count": 45,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 33
         }
       ]
     },
@@ -170,18 +170,18 @@
       "metadata": {
         "id": "D1P3COy7lKm4",
         "colab_type": "code",
+        "outputId": "1e4eea50-32f2-42ef-c113-835ccfbda801",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        },
-        "outputId": "16988feb-9d6c-468c-b2f7-b8d822a32216"
+        }
       },
       "source": [
         "from sklearn import tree\n",
         "clf = tree.DecisionTreeClassifier()\n",
         "clf.fit(X, Y)"
       ],
-      "execution_count": 63,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,88 +198,339 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 63
+          "execution_count": 40
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "n3KuWeBXlgWp",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "def visualize_tree(tree, feature_names):\n",
-        "    \"\"\"Create tree png using graphviz.\n",
-        "\n",
-        "    Args\n",
-        "    ----\n",
-        "    tree -- scikit-learn DecsisionTree.\n",
-        "    feature_names -- list of feature names.\n",
-        "    \"\"\"\n",
-        "    with open(\"dt.dot\", 'w') as f:\n",
-        "        export_graphviz(tree, out_file=f,feature_names=feature_names)\n",
-        "\n",
-        "    command = [\"dot\", \"-Tpng\", \"dt.dot\", \"-o\", \"dt.png\"]\n",
-        "    try:\n",
-        "        subprocess.check_call(command)\n",
-        "    except:\n",
-        "        exit(\"Could not run dot, ie graphviz, to \"\n",
-        "             \"produce visualization\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YIlImLbipE7U",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 305
-        },
-        "outputId": "59edf24c-863c-4491-8ac9-fc931b4f255c"
-      },
-      "source": [
-        "\n",
-        "visualize_tree(clf, features)"
-      ],
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-73-e8632c05dfb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvisualize_tree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-72-bb3084e931ad>\u001b[0m in \u001b[0;36mvisualize_tree\u001b[0;34m(tree, feature_names)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \"\"\"\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dt.dot\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mexport_graphviz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mcommand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"dot\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-Tpng\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dt.dot\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"-o\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"dt.png\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'export_graphviz' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yhoLip3XpI4a",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "!pip install -q graphviz"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "oPT_o0Wrp7eX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "ce14ee10-d36d-4636-de6f-478cbcda9ddc"
+      },
+      "source": [
+        "test_df.pop(\"Name\")\n",
+        "test_df.pop(\"Ticket\")\n",
+        "test_df.pop(\"Cabin\")"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       NaN\n",
+              "1       NaN\n",
+              "2       NaN\n",
+              "3       NaN\n",
+              "4       NaN\n",
+              "       ... \n",
+              "413     NaN\n",
+              "414    C105\n",
+              "415     NaN\n",
+              "416     NaN\n",
+              "417     NaN\n",
+              "Name: Cabin, Length: 418, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W7Chvnl_yHiM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "bf4f2382-7160-4214-b62a-252c929f8c0f"
+      },
+      "source": [
+        "test_df.head()"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PassengerId</th>\n",
+              "      <th>Pclass</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>SibSp</th>\n",
+              "      <th>Parch</th>\n",
+              "      <th>Fare</th>\n",
+              "      <th>Embarked</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>892</td>\n",
+              "      <td>3</td>\n",
+              "      <td>male</td>\n",
+              "      <td>34.5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.8292</td>\n",
+              "      <td>Q</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>893</td>\n",
+              "      <td>3</td>\n",
+              "      <td>female</td>\n",
+              "      <td>47.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.0000</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>894</td>\n",
+              "      <td>2</td>\n",
+              "      <td>male</td>\n",
+              "      <td>62.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>9.6875</td>\n",
+              "      <td>Q</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>895</td>\n",
+              "      <td>3</td>\n",
+              "      <td>male</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8.6625</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>896</td>\n",
+              "      <td>3</td>\n",
+              "      <td>female</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>12.2875</td>\n",
+              "      <td>S</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   PassengerId  Pclass     Sex   Age  SibSp  Parch     Fare Embarked\n",
+              "0          892       3    male  34.5      0      0   7.8292        Q\n",
+              "1          893       3  female  47.0      1      0   7.0000        S\n",
+              "2          894       2    male  62.0      0      0   9.6875        Q\n",
+              "3          895       3    male  27.0      0      0   8.6625        S\n",
+              "4          896       3  female  22.0      1      1  12.2875        S"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H030AyV6yqql",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_df=test_df.replace({\"male\":0,\"female\":1})\n",
+        "test_df=test_df.replace({\"S\":0,\"C\":1,\"Q\":2})\n",
+        "test_df=test_df.dropna()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0_ePorFhyxwr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_out=clf.predict(test_df[features])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ANh__lF4qha",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 415
+        },
+        "outputId": "a665d1d1-2da4-4007-b157-7f1a75630e9e"
+      },
+      "source": [
+        "out_file=pd.DataFrame()\n",
+        "out_file[\"PassengerId\"]=test_df[\"PassengerId\"]\n",
+        "out_file[\"Survived\"]=test_out\n",
+        "out_file"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PassengerId</th>\n",
+              "      <th>Survived</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>892</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>893</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>894</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>895</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>896</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>409</th>\n",
+              "      <td>1301</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>411</th>\n",
+              "      <td>1303</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>412</th>\n",
+              "      <td>1304</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>414</th>\n",
+              "      <td>1306</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>415</th>\n",
+              "      <td>1307</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>331 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     PassengerId  Survived\n",
+              "0            892         0\n",
+              "1            893         0\n",
+              "2            894         1\n",
+              "3            895         1\n",
+              "4            896         0\n",
+              "..           ...       ...\n",
+              "409         1301         1\n",
+              "411         1303         1\n",
+              "412         1304         0\n",
+              "414         1306         1\n",
+              "415         1307         0\n",
+              "\n",
+              "[331 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3JTozkNpzXlg",
         "colab_type": "code",
         "colab": {}
       },
