--- a/MissingData.ipynb
+++ b/MissingData.ipynb
@@ -84,12 +84,226 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "70eQHu3YOUV1",
+        "id": "nttrGES9PBnY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "8189e821-2b71-4dc1-d8d9-f9190675ce5c"
+      },
+      "source": [
+        "train_df.pop(\"Cabin\")\n",
+        "train_df.pop(\"Ticket\")"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0             A/5 21171\n",
+              "1              PC 17599\n",
+              "2      STON/O2. 3101282\n",
+              "3                113803\n",
+              "4                373450\n",
+              "             ...       \n",
+              "886              211536\n",
+              "887              112053\n",
+              "888          W./C. 6607\n",
+              "889              111369\n",
+              "890              370376\n",
+              "Name: Ticket, Length: 891, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4dDHMHZRrHof",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "9291af75-b942-45f5-c89a-ecfeda50ee2e"
+      },
+      "source": [
+        "train_df.pop(\"Name\")"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0                                Braund, Mr. Owen Harris\n",
+              "1      Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+              "2                                 Heikkinen, Miss. Laina\n",
+              "3           Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+              "4                               Allen, Mr. William Henry\n",
+              "                             ...                        \n",
+              "886                                Montvila, Rev. Juozas\n",
+              "887                         Graham, Miss. Margaret Edith\n",
+              "888             Johnston, Miss. Catherine Helen \"Carrie\"\n",
+              "889                                Behr, Mr. Karl Howell\n",
+              "890                                  Dooley, Mr. Patrick\n",
+              "Name: Name, Length: 891, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7tQBHAwGrUHV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "ff66ba38-29fb-4232-8027-b11b60596c89"
+      },
+      "source": [
+        "train_df.head()"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PassengerId</th>\n",
+              "      <th>Survived</th>\n",
+              "      <th>Pclass</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>SibSp</th>\n",
+              "      <th>Parch</th>\n",
+              "      <th>Fare</th>\n",
+              "      <th>Embarked</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.2500</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>71.2833</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>26.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7.9250</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>53.1000</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8.0500</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   PassengerId  Survived  Pclass  Sex   Age  SibSp  Parch     Fare  Embarked\n",
+              "0            1         0       3    0  22.0      1      0   7.2500       0.0\n",
+              "1            2         1       1    1  38.0      1      0  71.2833       1.0\n",
+              "2            3         1       3    1  26.0      0      0   7.9250       0.0\n",
+              "3            4         1       1    1  35.0      1      0  53.1000       0.0\n",
+              "4            5         0       3    0  35.0      0      0   8.0500       0.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zpEW6EUyrZrz",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "out=[i.split(',')[1].split('.')[0] for i in names]"
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "neigh = KNeighborsClassifier(n_neighbors=25)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -97,53 +311,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2uqycXT3Osla",
+        "id": "x4I0EJoLrol-",
         "colab_type": "code",
-        "outputId": "8942befb-16a6-4fb3-9fb7-362d02eb678c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 312
-        }
+        "colab": {}
       },
       "source": [
-        "set(out)"
+        "test_set=train_df[train_df.Age.isnull()]\n",
+        "train_set=train_df[train]"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lFnYF86WugEF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "outputId": "384cb05f-9336-4299-d0dd-d1c3d7963e4b"
+      },
+      "source": [
+        "train_df.isnull().sum()"
+      ],
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{' Capt',\n",
-              " ' Col',\n",
-              " ' Don',\n",
-              " ' Dr',\n",
-              " ' Jonkheer',\n",
-              " ' Lady',\n",
-              " ' Major',\n",
-              " ' Master',\n",
-              " ' Miss',\n",
-              " ' Mlle',\n",
-              " ' Mme',\n",
-              " ' Mr',\n",
-              " ' Mrs',\n",
-              " ' Ms',\n",
-              " ' Rev',\n",
-              " ' Sir',\n",
-              " ' the Countess'}"
+              "PassengerId      0\n",
+              "Survived         0\n",
+              "Pclass           0\n",
+              "Sex              0\n",
+              "Age            177\n",
+              "SibSp            0\n",
+              "Parch            0\n",
+              "Fare             0\n",
+              "Embarked         2\n",
+              "dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 32
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nttrGES9PBnY",
+        "id": "RvNPDtz7vJye",
         "colab_type": "code",
         "colab": {}
       },
